--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -832,7 +832,8 @@ a.back-to-top:hover, a.back-to-top:focus {
     top: 0;
   }
   .navbar-brand img {
-    width: 40%;
+    width: 47%;
+    padding: 0;
   }
   #mobile-menu {
     display: none;
